@@ -1,5 +1,12 @@
 2001-01-09  Marcus Brinkmann  <marcus@gnu.org>
 
+	* device.c (store_device_create): Protect code of last change with
+	#ifdef DEV_GET_RECORDS, and set sizes_len again before second try.
+	(enforce): Likewise. Move definition of variable err up to top
+	level.
+
+2001-01-09  Marcus Brinkmann  <marcus@gnu.org>
+
 	* device.c (enforce): First try DEV_GET_RECORDS, and only fall
 	back to DEV_GET_STORE if this fails with D_INVALID_OPERATION.
 	(store_device_create): Likewise, but fall back for any failure.
